--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,9 @@
-<router-outlet />
+<header class="site-header">
+	<div class="container">
+    <h1>On Est Quoi</h1>
+	</div>
+</header>
+
+<main>
+	<router-outlet></router-outlet>
+</main>
