--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,3 +1,9 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 /* Basic header styles for the site title */
 .site-header {
 	background-color: #e11d48; /* bright, lovely red */
@@ -27,7 +33,7 @@
 main {
 	max-width: 1100px;
 	padding: 1rem 3rem;
-	background-color: #fee2e2; /* light red/pink background */
+  flex: 1;
 }
 
 @media (min-width: 768px) {
