--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,8 @@ html {
     typography: Roboto,
     density: 0,
   ));
+
+  --mat-sys-surface: #fee2e2; /* light red/pink background */
 }
 
 body {
