Add accueil page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,8 @@ html {
   ));
 
   --mat-sys-surface: #fee2e2; /* light red/pink background */
+  --mat-button-protected-container-color: #e11d48; /* bright, lovely red */
+  --mat-button-protected-label-text-color: #fff; /* white text for contrast */
 }
 
 body {
