Modifier header pour lien

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <header class="site-header">
 	<div class="container">
-    <h1 i18n="@@on_est_quoi">What are we?</h1>
+    <a href="/"><h1 i18n="@@on_est_quoi">What are we?</h1></a>
     <div class="language-toggle">
       <button mat-button (click)="toggleLanguage()" class="lang-button">
         {{ i18n.getCurrentLanguage() === 'fr' ? 'EN' : 'FR' }}
