--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -22,8 +22,12 @@
 	align-items: center;
 }
 
-.site-header h1 {
+.site-header a {
+  text-decoration: none;
   flex: 1;
+}
+
+.site-header h1 {
 	font-family: 'Roboto', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
 	font-weight: 500;
 	font-size: 1.125rem;
