--- a/src/app/questionnaire/questionnaire.html
+++ b/src/app/questionnaire/questionnaire.html
@@ -1,1 +1,14 @@
-<app-thermometre></app-thermometre>
+<mat-stepper>
+  <mat-step label="Thermometre">
+    <app-thermometre></app-thermometre>
+    <div class="step-actions">
+      <button mat-button matStepperNext>Next</button>
+    </div>
+  </mat-step>
+  <mat-step label="Contrat">
+    <app-contrat></app-contrat>
+    <div class="step-actions">
+      <button mat-button matStepperPrevious>Previous</button>
+    </div>
+  </mat-step>
+</mat-stepper>
