--- a/src/app/create-account/create-account.scss
+++ b/src/app/create-account/create-account.scss
@@ -67,3 +67,11 @@
   margin-left: 0.25rem;
   font-weight: 600;
 }
+
+/* inline field error */
+.field-error {
+  color: #b00020;
+  font-size: 0.8125rem;
+  font-style: italic;
+  margin-top: 0.25rem;
+}
