--- a/src/app/questionnaire/questionnaire.html
+++ b/src/app/questionnaire/questionnaire.html
@@ -1,4 +1,10 @@
 <mat-stepper>
+  <mat-step label="Destinataire">
+    <app-destinataire></app-destinataire>
+    <div class="step-actions">
+      <button mat-button matStepperNext>Next</button>
+    </div>
+  </mat-step>
   <mat-step label="Thermometre">
     <app-thermometre></app-thermometre>
     <div class="step-actions">
