--- a/src/app/thermometre/thermometre.html
+++ b/src/app/thermometre/thermometre.html
@@ -1,7 +1,7 @@
 <div class="thermo-page">
   <div class="thermo-card">
     <header class="thermo-header">
-      <h1 i18n="@@thermometre.title">Step 1 : Temperature</h1>
+      <h1 i18n="@@thermometre.title">Temperature</h1>
       <p class="thermo-sub" i18n="@@thermometre.subtitle">Let's start by measuring the temperature! Where do you stand in relation to this person?</p>
     </header>
 
