Modifier style bouton suivant

--- a/src/app/questionnaire/questionnaire.html
+++ b/src/app/questionnaire/questionnaire.html
@@ -2,13 +2,13 @@
   <mat-step label="Destinataire">
     <app-destinataire></app-destinataire>
     <div class="step-actions">
-      <button mat-button matStepperNext>Next</button>
+      <button matButton="filled" matStepperNext>Next</button>
     </div>
   </mat-step>
   <mat-step label="Thermometre">
     <app-thermometre></app-thermometre>
     <div class="step-actions">
-      <button mat-button matStepperNext>Next</button>
+      <button matButton="filled" matStepperNext>Next</button>
     </div>
   </mat-step>
   <mat-step label="Contrat">
